src/objects/SunCase__c.object
<CustomObject>
    <description>&quot;Sun Kindergarten&quot; incidents and issues object</description>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reporter__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Reporter</label>
        <referenceTo>SunContact__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Reporters</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>SunCase</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000}</displayFormat>
        <label>Case</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SunCases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>